objects/FLODocs__Version_Control_System_Log__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Async_Job_Id__c</fullName>
        <description>Id of the batch job that commits the files.</description>
        <inlineHelpText>Id of the batch job tha commits the files.</inlineHelpText>
        <label>Async Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Version Control System Logs</relationshipLabel>
        <relationshipName>Version_Control_System_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Commit_Message__c</fullName>
        <description>Git Commit message.</description>
        <inlineHelpText>Git Commit message.</inlineHelpText>
        <label>Commit Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customizations__c</fullName>
        <label>Customizations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Exception_Type__c</fullName>
        <description>Apex exception type name. Internal platform errors are represented as the System.UnexpectedException type.</description>
        <inlineHelpText>Apex exception type name. Internal platform errors are represented as the System.UnexpectedException type.</inlineHelpText>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Job_Scope__c</fullName>
        <description>The BatchApexErrorEvent returns the &apos;scope&apos; value here. For the commit batch, the &apos;scope&apos; is the name of the file being commited.</description>
        <inlineHelpText>The BatchApexErrorEvent returns the &apos;scope&apos; value here. For the commit batch, the &apos;scope&apos; is the name of the file being commited.</inlineHelpText>
        <label>Failed File</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Message__c</fullName>
        <description>The BatchApexErrorEvent can return an error message of max length 5000.</description>
        <inlineHelpText>The BatchApexErrorEvent can return an error message of max length 5000.</inlineHelpText>
        <label>Failure Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Phase__c</fullName>
        <description>The phase of the batch job when the error occurred: START, EXECUTE, FINISH.</description>
        <inlineHelpText>The phase of the batch job when the error occurred: START, EXECUTE, FINISH.</inlineHelpText>
        <label>Failure Phase</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Repository_Name__c</fullName>
        <label>Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resource_Type__c</fullName>
        <label>Resource Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Stack_Trace__c</fullName>
        <description>Apex stack trace of the BatchApexErrorEvent failure. Max length 5000.</description>
        <inlineHelpText>Apex stack trace of the BatchApexErrorEvent failure. Max length 5000.</inlineHelpText>
        <label>Stack Trace</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Version_Control_Credentials_Id__c</fullName>
        <label>Version Control Credentials Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Version Control System Log</label>
    <nameField>
        <label>Version Control System Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Version Control System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>